[package]
name = "c63-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c63enc"

[[bin]]
name = "c63dec"

[dependencies]
clap = {version = "4.0.8", default-features = true, features = ["cargo"]}
